<resources>
    <string name="app_name">Hello World Messenger</string>
    <string name="global">Global</string>
    <string name="chats">Chats</string>
    <string name="friends">Friends</string>
    <string name="account">Account</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="create_new_account">Create new account</string>
    <string name="name">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="add_avatar">Add avatar</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="greetings">Welcome back!</string>
    <string name="log_in_to_continue">Log In to continue</string>
    <string name="log_in">Log In</string>
    <string name="choose_avatar">Choose avatar</string>
    <string name="name_error">Enter name</string>
    <string name="email_error">Enter email</string>
    <string name="password_error">Enter password</string>
    <string name="confirm_password_error">Password does not match</string>
    <string name="sign_up_success">Sign Up success!</string>
    <string name="sign_up_failed">Sign Up failed :(</string>
    <string name="avatar_error">Please, choose avatar</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="outgoing_last_message">You:</string>
    <string name="online_status">online</string>
    <string name="offline_status">offline</string>
    <string name="user_not_found">User not found</string>
    <string name="answer_error">Failed to get answer</string>
    <string name="off_notifications">Turn off notifications</string>
    <string name="edit_profile">Edit profile</string>
    <string name="log_out">Log out</string>
    <string name="last_message_placeholder">Last message</string>
    <string name="outgoing_btn">Outgoing</string>
    <string name="incoming_btn">Incoming</string>
    <string name="global_btn">Global</string>
    <string name="local_btn">Local</string>
    <string name="write_a_message">Write a message</string>
    <string name="delete_from_friends_list">Delete from friends list</string>
    <string name="ban_user">Ban user</string>
    <string name="friends_not_found">Friends not found</string>
    <string name="users_not_found">Users not found</string>
    <string name="search_for_users">Search for users</string>
    <string name="search_for_chats">Search for chats</string>
    <string name="add_friend">Add friend</string>
    <string name="remove_friend">Remove friend</string>
    <string name="cancel_request">Cancel request</string>
    <string name="accept_request">Accept Request</string>
    <string name="chats_not_found">Chats not found</string>
    <string name="save">Save</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="profile_has_updated">Profile has updated</string>
    <string name="empty_name">Name can\'t be empty</string>
    <string name="password_length_error"><![CDATA[Password length should be > 5 and < 24]]></string>
    <string name="loading_placeholder">Loading…</string>
    <string name="name_too_long"><![CDATA[Name length should be < 30]]></string>
    <string name="password_invalid_characters_error">
        <![CDATA[Password should only contain letters a–z, A–Z, digits 0–9, and special symbols @#$%^&+=]]>
    </string>
    <string name="message_is_too_long"><![CDATA[Message length should be < 300]]></string>
    <string name="log_in_failed">Log in failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note">Note</string>
    <string name="write_a_note">Write a note</string>
    <string name="delete">Delete</string>
    <string name="notes">Notes</string>
    <string name="admin_rules">Admin rules</string>
    <string name="delete_message_admin">As administrator you can delete this message for all users. Do you want to do that?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>